--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,30 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="container">
+    <h1>{{title}}</h1>
+    <p>Welcome to {{title}}</p>
+    <form>
+        <div class="form-group">
+            <label for="formGroupExampleInput">Example label</label>
+            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+        </div>
+
+
+        <div class="form-group">
+            <label for="from-date-input" class="col-xs-2 col-form-label">ToDate</label>
+            <input class="form-control" type="date" value="2011-08-19" id="from-date-input">
+
+        </div>
+
+        <div class="form-group">
+            <label for="to-date-input" class="col-xs-2 col-form-label">From Date</label>
+            <div class="col-xs-10">
+                <input class="form-control" type="date" value="2011-08-19" id="to-date-input">
+            </div>
+        </div>
+
+
+
+
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+</div>
+
