input wait 3 character to sho list for better performance. Needs impruvement. solution not very effitient

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,7 +8,7 @@
                 <div class="form-group">
                     <div class="col-md-2 text-right"><label for="formGroupExampleInput">From</label></div>
                     <div class="col-md-10">
-                        <input type="text" class="form-control" list="places" id="formGroupExampleInput" placeholder="Example input">
+                        <input type="text" class="form-control"  id="from-airport" placeholder="Example input">
                         {{> countries}}
                     </div>
                 </div>
@@ -17,7 +17,7 @@
                 <div class="form-group">
                     <div class="col-md-2 text-right"><label for="formGroupExampleInput">To</label></div>
                     <div class="col-md-10">
-                        <input type="text" class="form-control" list="places" id="formGroupExampleInput" placeholder="Example input">
+                        <input type="text" class="form-control"  id="to-airport" placeholder="Example input">
                         {{> countries}}
                     </div>
                 </div>
