--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,4 +17,6 @@
   <body>
     {{{body}}}
   </body>
+  <script src="/js/jquery.min.js"></script>
+  <script src="/js/custom.js" ></script>
 </html>
